<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.connectassistantforandroid.LoginActivity" >
    
    <!-- CONNECT ASSISTANT TEXT -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_marginTop="-75dp"
        android:text="@string/app_name"
        android:textColor="#00325b"
        android:textSize="20pt"
        android:gravity="center" />
    
    <!-- BRUNEL UNIVERSITY LOGO -->
    <ImageView
        android:id="@+id/brunel_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:layout_marginTop="40dp"
        android:src="@drawable/brunel_logo"
        android:contentDescription="@string/brunel_logo" />
    
    <!-- LOGIN -->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp" >
         
         <TextView
             android:id="@+id/login_incorrect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="8pt"
             android:textColor="#F00" />
        
         <EditText
             android:id="@+id/login_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_username"
             android:singleLine="true" />
         
         <EditText
             android:id="@+id/login_password"
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_password" />
         
         <Button
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/login_button" />

    </LinearLayout>

</LinearLayout>
