<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/MAC_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#00325b"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/MAC_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/enter_MAC"
        android:layout_marginTop="25dp" />
   
   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp" 
        android:gravity="center" >
        <Button
	        android:id="@+id/showMAC"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_show" />
	    <Button
	        android:id="@+id/postMAC"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_register" />
    </LinearLayout>

</LinearLayout>
